Freeze navbar and put language options in dropdown button. (#112)
* Setup basic dropdown.

* Make navbar fixed. Remove SVG link tags. Style language button.

* Add margin on App component.

* Remove debug div.

* Fix stylelint complaint.

* Enable button-groups.

* Add language to redux.

* Add tests for language reducer.

* Fix eslint complaint.

* Change eventKey to language.

* Add setLanguage. Remove redundant functions and tests. Fix language button.

* Position language button absolute.

* Remove internal state. Use language instead of country.

* Fix typo.

* Fix eslint errors.

* Fix conflict.

* Remove switch.

* Use ISO standard for language names.

* Update tests.

* Set default language to nb.

* Return state if language is not valid.

* Fix typo.

* Add svg to dropdown.

* Fix eslint error.

* Update test.

* Fix paths.

* Adjust vertical spacing.

--- a/src/assets/css/_buttons.scss
+++ b/src/assets/css/_buttons.scss
@@ -63,6 +63,25 @@
   @include button-variant(#fff, $color-blue, $color-blue-median);
 }
 
+.btn-language-student {
+  @include button-variant($color-green-dark, transparent, $color-green-dark);
+}
+
+.btn-language-teacher {
+  @include button-variant($color-blue-dark, transparent, $color-blue-dark);
+}
+
+.btn-language {
+  padding: 2px;
+  font-size: 10pt;
+}
+
+.btn-language-dropdown {
+  position: absolute;
+  right: 15px;
+  top: 2.5px;
+}
+
 .btn-student-nav {
   @include button-nav(#fff, $color-green, $color-green-median, 25%);
 }
