--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -37,13 +37,21 @@
   display: inline-block;
 }
 
+.dropdown-menu {
+  width: 175px;
+}
+
 .navbar-brand {
   padding: 25px 15px;
 }
 
+.navbar-right {
+  margin-right: 0;
+}
+
 .navbar-default {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 30px;
+  padding-bottom: 10px;
   border-radius: 0;
   background-color: $color-green-light;
   color: $color-green-dark;
@@ -57,13 +65,12 @@
 }
 
 @media (max-width: 767px) {
-  .navbar-default {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
   .navbar-form {
     margin: 0;
     padding-bottom: 0;
+  }
+  .navbar-right {
+    float: left;
   }
   .form-group {
     max-width: 200px;
