Don't wrap text on hover on LessonItem, CourseItem, Playlist (#131)
* Don't wrap text on hover

* Change text color instead of bold on hover

--- a/src/components/LessonList/LessonItem.scss
+++ b/src/components/LessonList/LessonItem.scss
@@ -1,3 +1,5 @@
+@import "../../assets/css/colors";
+
 a:hover {
   text-decoration: none;
 }
@@ -7,7 +9,7 @@ a:hover {
 
   &:hover {
     cursor: pointer;
-    font-weight: bold;
+    color: darken($brand-primary, 20%);
   }
 }
 
