--- a/src/assets/css/_panels.scss
+++ b/src/assets/css/_panels.scss
@@ -2,9 +2,19 @@
 @import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/panels';
 
 .panel-student {
-  @include panel-variant($color-green-light, $color-green-dark, $color-green-light, darken(adjust-hue($color-green-light, -10), 5%));
+  @include panel-variant(
+                  $color-green-light,
+                  $color-green-dark,
+                  $color-green-light,
+                  darken(adjust-hue($color-green-light, -10), 5%)
+  );
 }
 
 .panel-teacher {
-  @include panel-variant($color-blue-light, $color-blue-dark, $color-blue-light, darken(adjust-hue($color-blue-light, -10), 5%));
+  @include panel-variant(
+                  $color-blue-light,
+                  $color-blue-dark,
+                  $color-blue-light,
+                  darken(adjust-hue($color-blue-light, -10), 5%)
+  );
 }
