--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,4 +1,4 @@
+// NOTE: Extra bootstrap styles are also added in src/pages/customBootstrapStyles.js
 @import "buttons";
 @import "panels";
 @import "nav";
-@import "type";
