--- a/src/components/Navigation/NavBar.scss
+++ b/src/components/Navigation/NavBar.scss
@@ -15,9 +15,10 @@ $space-between-text-and-flag: 10px;
 .gadgetGroup {
   display: inline;
   float: right;
-  padding: 10px 0 0 0;
+  padding: 10px 0 0;
 }
+
 .gadgetContainer {
   display: inline-block;
-  padding: 0 5px 10px 5px;
+  padding: 0 5px 10px;
 }
