--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,6 +1,3 @@
-@import './fonts';
-@import './colors';
-
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: transparent;
@@ -29,7 +26,7 @@
   border-radius: 0;
   background-color: $color-green-light;
   color: $color-green-dark;
-  font-family: $font-default;
+  font-family: $font-family-roboto;
   font-weight: 300;
 }
 
