Remove all direct use of pt and px inside document, convert to em or predefined bootstrap variables (or variables derived from BS).
Also added alias to bootstrap stylesheets. Remember to add ~ before bootstrapStyles when importing inside css.

--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -5,17 +5,13 @@
 // codeclub_lesson_builder/styles/lesson.less
 //////////////////////////////////////////////
 @import '../../../node_modules/highlight.js/styles/idea';
-@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/image';
+@import '~bootstrapStyles/mixins/image';
 
 // responsive images
 figure > img {
   @include img-responsive;
   margin: 0 auto; // centered
   padding: 20px;
-}
-
-.intro h1 {
-  font-size: 26px;
 }
 
 // list items in .check, .activity and .save
