--- a/src/components/LessonList/LessonItem.scss
+++ b/src/components/LessonList/LessonItem.scss
@@ -1,12 +1,10 @@
-@import "../../styles/variables";
+@import "~bootstrapStyles/variables";
 
 a:hover {
   text-decoration: none;
 }
 
 .lessonItem {
-  font-size: 1.3em;
-
   &:hover {
     cursor: pointer;
     color: darken($brand-primary, 20%);
