--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/buttons';
+@import '~bootstrapStyles/mixins/buttons';
 
 @mixin button-nav($color, $background, $border, $darken) {
   color: $color;
