--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "pre-customizations";
+@import "~bootstrapStyles/variables";
 
 // Colors
 $color-gray: #656565;
@@ -14,7 +15,8 @@ $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
 
 // Fonts
-$font-size-base: 16px; // Override bootstrap's 14px default base
+$font-size-xlarge: ceil($font-size-base * 1.5);
+$font-size-xsmall: ceil($font-size-base * 0.7);
 
 $font-family-roboto: 'Roboto', 'Verdana', sans-serif;
 $font-family-roboto-mono: 'Roboto Mono', monospace;
