Change size of levelicons according to font size, and change vertical-align to baseline.

--- a/src/components/LevelIcon.scss
+++ b/src/components/LevelIcon.scss
@@ -1,20 +1,6 @@
-.small {
-  margin-right: 4px;
-  width: 15px;
-  height: 15px;
-  vertical-align: top;
-}
-
-.medium {
-  margin-right: 5px;
-  width: 25px;
-  height: 25px;
-  vertical-align: top;
-}
-
-.large {
-  margin-right: 10px;
-  width: 35px;
-  height: 35px;
-  vertical-align: top;
+.levelIcon {
+  margin-right: 0.2em;
+  width: 0.75em;
+  height: 0.75em;
+  vertical-align: baseline;
 }
