Let only p and li scale text size with media queries, and make sure that none of the filters overflow the filter.

--- a/src/components/Lesson/Lesson.scss
+++ b/src/components/Lesson/Lesson.scss
@@ -1,5 +1,7 @@
 .container {
-  max-width: 770px; // Same as the old pages
+  max-width: 800px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
