--- a/src/components/ButtonItem.scss
+++ b/src/components/ButtonItem.scss
@@ -9,6 +9,7 @@ $button-green-hover: #359e37;
   font-family: $font-family-roboto;
   font-weight: 300;
   color: white;
+  font-size: 1.5em;
 }
 
 .button {
