--- a/src/pages/FrontPage.scss
+++ b/src/pages/FrontPage.scss
@@ -6,8 +6,13 @@
 
 .fontTitle {
   font-family: $font-family-roboto-mono;
-  font-size: 3em;
   font-weight: 300;
+  @media (max-width: $screen-xs-max) {
+    font-size: 2.2em;
+  }
+  @media (min-width: $screen-sm-min) {
+    font-size: 3em;
+  }
 }
 
 .title {
