--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -2,27 +2,17 @@
 // e.g. removing padding and margins from or setting fonts in html, body, p etc.
 // Do NOT change or define any bootstrap specific styles here (although it is ok to use bootstrap variables).
 
+@import './mixins';
+
 html {
   // Bootstrap uses px for all font sizes, and bases them from $font-size-base,
   // which can be changed in pre-customizations.scss.
   // The global font size for the website is here set to this same value.
-  // In general, it is usually smart to base other font sizes off of this by using em (or rem) or percent,
+  // In general, it is usually smart to base other font sizes off of this by using relative units (em,rem,%),
   // rather than using px directly, since with the latter, a change in $font-size-base won't affect it,
   // and the font's size would not scale relative to all the other fonts.
+  // As usual, relative size units are based on the parent (em,%) or html-root (rem), and it should be noted
+  // that while the parent usually means the html-root, it might also be one or more ancestors defining their own
+  // font-sizes, either based on the html-root, or setting the font-size directly (if it is a bootstrap element).
   font-size: $font-size-base;
-}
-
-p,
-li {
-  @media (max-width: $screen-xs-max) {
-    font-size: 106.25%; // 17px if base font is 16px
-  }
-
-  @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-    font-size: 118.75%; // 19px if base font is 16px
-  }
-
-  @media (min-width: $screen-md-min) {
-    font-size: 125%; // 20px if base font is 16px
-  }
 }
