--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,11 @@ $color-blue-light: #a3cccb;
 $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
 
+$lkk-green: #0fbe7c;
+$lkk-dark-grey: #3a3a3a;
+$lkk-grey: #444;
+$lkk-offwhite: #f2f2f2;
+
 // Fonts
 $font-size-xs-pct: 106.25%; // 17px if base font is 16px
 $font-size-sm-pct: 118.75%; // 19px if base font is 16px
