--- a/src/components/Navigation/BreadCrumb.scss
+++ b/src/components/Navigation/BreadCrumb.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+
 .breadcrumb {
   padding-left: 10px;
   float: left;
@@ -17,4 +19,10 @@
 .lessonLink {
   font-size: 20px;
   vertical-align: middle;
+}
+
+.lesson {
+  @media (max-width: $screen-xs-max) {
+    display: none;
+  }
 }
