Fix small aesthetical errors in breadcrumb

--- a/src/components/Navigation/BreadCrumb.scss
+++ b/src/components/Navigation/BreadCrumb.scss
@@ -7,7 +7,7 @@
 }
 
 .homeIcon {
-  line-height: 0; // So that it doesn't affect the centering of the rest of the breadcrumb text
+  line-height: 45px;
   font-size: 0.8em;
 }
 
