--- a/src/components/Navigation/NavLink.scss
+++ b/src/components/Navigation/NavLink.scss
@@ -3,6 +3,10 @@
   &:focus,
   &:hover {
     text-decoration: none;
+    color: black;
+  }
+  &:hover {
     opacity: 0.5;
+    color: black;
   }
 }
