--- a/src/components/ImprovePage.scss
+++ b/src/components/ImprovePage.scss
@@ -2,6 +2,7 @@
 
 .link {
   text-decoration: none !important;
+  text-align: center;
   color: black;
   border-bottom: 1px black dotted;
 }
@@ -13,18 +14,19 @@
 
 .infoBox {
   display: flex;
+  flex-direction: column;
+  text-align: center;
+
   composes: fontInfoBox;
   padding: 5px;
   margin: 0 auto;
-  max-width: 500px;
-  
+  max-width: 700px;
   border-radius: 10px;
 }
 
 .infoBoxRow {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
 
   div {
     padding: 5px;
@@ -35,8 +37,9 @@
 
   background-color: red;
 
- /*
+ 
  composes: infoBox;
+ /*
   background-color: $color-green-light;
   color: $color-green-dark;
   a {
@@ -47,10 +50,11 @@
 
 .infoBoxTeacher {
 
-background-color: yellow;
+  background-color: yellow;
 
-  /*
+  
   composes: infoBox;
+  /*
   background-color: $color-blue-light;
   color: $color-blue-dark;
   a {
